SW - update to IDE 5.4.0 and Libs keeping 1.14.0

--- a/SW/.project
+++ b/SW/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>IoT4Bees-Ctrl</name>
+	<name>LoRaWAN_ADC-bridges</name>
 	<comment />
 	<projects>
 	</projects>
